# hold-this

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/hold_this/: __init__.py  hold_this.py
src/hold_this.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
