[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hold-this"
version = "0.1.6"
description = "hold anything."
requires-python = ">=3.9"
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
authors = [{name = "Soumyo Deep Gupta", email = "deep.main.ac@gmail.com"}]
maintainers = [{name = "Soumyo Deep Gupta", email = "deep.main.ac@gmail.com"}]
keywords = ['d33pster', 'hold', 'cli-tool', 'like brew', 'command', 'helper']
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'optioner>=1.3.2'
]

[project.scripts]
hold = "hold_this.hold_this:main"

[project.urls]
Homepage = 'https://github.com/d33pster/hold-this'
Issues = 'https://github.com/d33pster/hold-this/issues'